--- a/src/style.css
+++ b/src/style.css
@@ -240,6 +240,7 @@ body.initial .splash {
 .char .body {
   position: absolute;
   background-color: var(--char-color);
+  -webkit-clip-path: polygon(0% 0%, 50% 0%, 100% 0%, 50% 100%);*
   clip-path: polygon(0% 0%, 50% 0%, 100% 0%, 50% 100%);
   height: 40%;
   width: 40%;
@@ -248,6 +249,7 @@ body.initial .splash {
 }
 
 .char[data-owner] .body {
+  -webkit-clip-path: polygon(10% 0%, 50% 20%, 90% 0%, 50% 100%);
   clip-path: polygon(10% 0%, 50% 20%, 90% 0%, 50% 100%);
 }
 
@@ -299,6 +301,7 @@ body.initial .splash {
   height: 100%;
   width: 100%;
   background-color: var(--white);
+  -webkit-clip-path: polygon(35% 45%, 35% 0, 65% 0, 65% 45%, 100% 45%, 50% 100%, 0 45%);
   clip-path: polygon(35% 45%, 35% 0, 65% 0, 65% 45%, 100% 45%, 50% 100%, 0 45%);
   opacity: 0.5;
 }
@@ -343,6 +346,7 @@ body.initial .splash {
 
 .char.died .body {
   transition-duration: 2s;
+  -webkit-clip-path: polygon(110% 110%, 150% 120%, 190% 100%, 0% 100%);
   clip-path: polygon(110% 110%, 150% 120%, 190% 100%, 0% 100%);
 }
 
