--- a/src/style.css
+++ b/src/style.css
@@ -240,7 +240,7 @@ body.initial .splash {
 .char .body {
   position: absolute;
   background-color: var(--char-color);
-  -webkit-clip-path: polygon(0% 0%, 50% 0%, 100% 0%, 50% 100%);*
+  -webkit-clip-path: polygon(0% 0%, 50% 0%, 100% 0%, 50% 100%);
   clip-path: polygon(0% 0%, 50% 0%, 100% 0%, 50% 100%);
   height: 40%;
   width: 40%;
